# cpse

./: .mypy.ini  CLAUDE.md  CONTRIBUTING.md  MODELLING.md  README.md  justfile  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: CI.yml  dependabot.yml
.github/workflows/: CI.yml  build-and-release.yml  ci-pr.yml  test.yml
ci/: stamp_dev_version.py
cpse/: CPSE.py  CPSEBaseEngine.py  CPSETimepoints.py  __init__.py  cpse.py
src/cpse/: CPSE.py  CPSEBaseEngine.py  CPSETimepoints.py  __init__.py
test/: test1.py  test2.py
tests/: CommonTests.py  EngineContractTests.py  conftest.py  test_CPSE.py  test_CPSETimepoints.py  test_cpse.py  test_cpse_timepoints.py  test_engines.py
