[project]
name = "up-cpse"
version = "0.1.0"
description = "Constraint Programming Scheduling Engine"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "FBK PSO Unit", email = "pso-tools@fbk.eu" },
]
urls = { "Homepage" = "https://github.com/fbk-pso/cpse" }
dependencies = [
    "ortools>=9.15,<9.16",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "mypy==2.1.0",
    "ruff==0.15.20",
    "pre-commit==4.6.0",
    "unified-planning @ git+https://github.com/aiplan4eu/unified-planning.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpse"]

[tool.hatch.build.targets.sdist]
include = ["src/cpse", "README.md", "LICENSE"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests", "ci"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF", "PERF", "PIE"]

[tool.ruff.lint.per-file-ignores]
# The test suite relies on `from unified_planning.shortcuts import *` (that module
# is intended to be star-imported), and pytest fixtures used as test-method
# arguments trip F811 against the fixture import (a false positive).
"tests/*" = ["F403", "F405", "F811"]

[tool.mypy]
check_untyped_defs = true
disable_error_code = ["no-redef"]
files = ["src/cpse"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["unified_planning.*"]
ignore_missing_imports = true
